# WISDAM

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  WISDAMapp_pyinstaller.spec  pyproject.toml  readme.md
config/: object_types.txt  project_config_dugongdetector.json
docs/: wisdam_app_manual_v1_0.docx
scripts/: generate_huge_AI_set.py  uic_converter.bat
scripts/conversion/: ConverterDugongDetector_Wisdam1.spec  dugongdetector_to_v1.py  project_config_dugongdetector.json
src/WISDAM/: __init__.py  main.py
src/WISDAM/ai/: base_class.py  generic_csv.py  import_objects.py  mad_seaforg.py  wisdam_ai_wrapper.py  wisdam_docker.py
src/WISDAM/app/: utils_qt.py  var_classes.py  version.py
src/WISDAM/app/custom_elements/: colorButton.py  colorScheme.py  comboInteractive.py  gaugeProgress.py  json_model_viewer.py  layoutEnvironment.py  menu_left.py  pieChart.py  spinningWaiter.py  verticallabel.py
src/WISDAM/app/graphic/: gisScene.py  gisView.py  imageScene.py  imageView.py  itemsGrahpicScene.py  items_coloring.py
src/WISDAM/app/gui_design/: files.qrc  gui_about.ui  gui_config.ui  gui_confirm.ui  gui_georef.ui  gui_image_meta.ui  gui_info.ui  gui_main.ui  gui_mapper.ui  gui_meta.ui  gui_path.ui  gui_project_creator.ui  gui_type.ui  gui_user.ui  ui_about.py  ui_config.py  ui_confirm.py  ui_georef.py  ui_image_meta.py  ui_info.py  ui_main.py  ui_mapper.py  ui_meta.py  ui_path.py  ui_project_creator.py  ui_type.py  ui_user.py
src/WISDAM/app/model_views/: aiView.py  compareViews.py  galleryView.py  groupArea.py  imageListView.py  (+1 more)
src/WISDAM/compare/: export.py  search.py  utils.py
src/WISDAM/core_interface/: image_loader.py  loader_digitizer.py  loader_gis.py  meta_reader.py  store_images.py  test_single_image.py  update_image_object_geometry.py  wisdamIMAGE.py
src/WISDAM/db/: createDb.py  dbHandler.py  environment.py  release_value_changes.py
src/WISDAM/importer/: aircraftAeroglob.py  dji_images.py  exifPose.py  importerWisdam.py  loaderImageBase.py  murdochVarda.py  opk_csv.py  orthoGeneral.py  sd_cam_no_focal.py  simpleImage.py  storeExternalMurdoch.py  wingtraLogfile.py  yrp_csv.py
src/WISDAM/license/: ThirdPartyNotices.json
src/WISDAM/statistic/: image_statistics.py  process_group_area.py
(+19 files in other folders)
